# coreason-catalog

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  NOTICE  README.md  VIGNETTE.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: architecture.md  index.md  prd.md  usage.md
scripts/: install_opa.sh
src/coreason_catalog/: __init__.py  dependencies.py  main.py  models.py
src/coreason_catalog/api/: routes.py
src/coreason_catalog/services/: broker.py  embedding.py  policy_engine.py  provenance.py  registry.py  sse_dispatcher.py  vector_store.py
src/coreason_catalog/utils/: __init__.py  logger.py
tests/: test_broker.py  test_broker_edge_cases.py  test_dependencies.py  test_dependencies_complex.py  test_edge_cases_identity.py  test_embedding.py  test_main.py  test_models.py  test_policy_engine.py  test_policy_engine_integration.py  test_provenance.py  test_provenance_complex.py  test_registry.py  test_sse_dispatcher.py  test_utils.py  test_vector_store.py  test_vector_store_complex.py  test_workflow_scenarios.py  test_zero_copy.py
